carrousel con circulitos

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <button id="retroceder">Retroceder</button>
             <img id="imagen" src="" alt="carrousel" width="500" height="300">
             <button id="avanzar">Siguiente</button>
+            <div id="circulos"></div>
         </article>
+        <template id="template-circulo">
+            <input type="radio" name="circulo">
+        </template>
     </body>
 </html>
