--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <img id="imagen" src="" alt="carrousel" width="500" height="300">
             <button id="avanzar">Siguiente</button>
             <div id="circulos"></div>
+            <button id="parar"> Parar </button>
+            <button id="autoplay">AutoPlay</button>
         </article>
         <template id="template-circulo">
             <input type="radio" name="circulo">
